# univis_ui

./: ALPHA_RELEASE_CHECKLIST.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_0.2.0-alpha.1.md  RELEASE_NOTES_2026-03-06.md  readme_for_ai.md
assets/shaders/: unode.wgsl  unode_3d.wgsl
book_ar/: book.toml
book_ar/src/: SUMMARY.md  intro.md  quick-start.md
book_ar/src/api/: events.md  public-types.md
book_ar/src/architecture/: frame-lifecycle.md  plugin-truth-table.md  plugins.md
book_ar/src/development/: compatibility-matrix.md  contributing.md  current-limitations.md  example-validation.md  smoke-test-plan.md  testing.md  troubleshooting.md
book_ar/src/examples/: index.md
book_ar/src/interaction/: overview.md  picking.md  support-matrix.md
book_ar/src/layout/: cache.md  display-modes.md  node-model.md  overview.md
book_ar/src/rendering/: materials-and-shaders.md  text-clipping.md
book_ar/src/widgets/: overview.md
book_en/: book.toml
book_en/src/: SUMMARY.md  intro.md  quick-start.md
book_en/src/api/: index.md
book_en/src/architecture/: overview.md  plugin-truth-table.md  plugins.md
book_en/src/development/: compatibility-matrix.md  current-limitations.md  example-validation.md  smoke-test-plan.md  testing.md
book_en/src/examples/: index.md
book_en/src/interaction/: states.md  support-matrix.md
book_en/src/layout/: clip-and-pbr.md  layout-and-self.md  roots.md  solver-passes.md
book_en/src/performance/: layout-cache.md  overview.md  profiler.md
book_en/src/rendering/: overview.md
book_en/src/widgets/: actions.md  inputs.md  panel-window.md  scroll-view.md  text-image-badge.md
crates/univis_ui_core/: Cargo.toml
crates/univis_ui_core/src/: lib.rs
crates/univis_ui_core/src/layout/: geometry.rs  image.rs  mod.rs
crates/univis_ui_core/src/style/: icons.rs  mod.rs
crates/univis_ui_engine/: Cargo.toml
crates/univis_ui_engine/src/: lib.rs  schedule.rs
crates/univis_ui_engine/src/layout/: geometry.rs  layout_system.rs  mod.rs  profiling.rs  solver_types.rs  univis_node.rs
crates/univis_ui_engine/src/layout/algorithms/: bridge.rs
crates/univis_ui_engine/src/layout/algorithms/places/: display.rs
crates/univis_ui_engine/src/layout/core/: hierarchy.rs  layout_cache.rs  mod.rs  pass_down.rs  pass_up.rs  solver.rs
crates/univis_ui_engine/src/layout/pipeline/: container.rs
crates/univis_ui_engine/src/layout/render/: material.rs  material_3d.rs  mod.rs  system.rs
crates/univis_ui_interaction/: Cargo.toml
crates/univis_ui_interaction/src/: lib.rs
crates/univis_ui_interaction/src/interaction/: feedback.rs  mod.rs  picking.rs
crates/univis_ui_layout/: Cargo.toml
crates/univis_ui_layout/src/: lib.rs
crates/univis_ui_layout/src/layout/: mod.rs  profiling.rs
crates/univis_ui_layout/src/layout/algorithms/: mod.rs
crates/univis_ui_layout/src/layout/algorithms/places/: display.rs
crates/univis_ui_layout/src/layout/core/: hierarchy.rs  layout_cache.rs  pbr.rs  solver.rs
crates/univis_ui_layout/src/layout/pipeline/: container.rs
crates/univis_ui_render/: Cargo.toml
crates/univis_ui_render/src/: lib.rs
crates/univis_ui_render/src/layout/: mod.rs
crates/univis_ui_render/src/layout/render/: material.rs  material_3d.rs  mod.rs
crates/univis_ui_style/: Cargo.toml
crates/univis_ui_style/src/: lib.rs
crates/univis_ui_style/src/style/: mod.rs
crates/univis_ui_widgets/: Cargo.toml
crates/univis_ui_widgets/src/: lib.rs
crates/univis_ui_widgets/src/widget/: badge.rs  button.rs  checkbox.rs  divider.rs  drag_value.rs  icon_btn.rs  image.rs  mod.rs  panel.rs  progress.rs  radio.rs  scroll_view.rs  seekbar.rs  select.rs  text_field.rs  text_label.rs  toggle.rs
examples/: alignment.rs  border_light_3d.rs  card_profile.rs  complex_dashboard.html  complex_dashboard.rs  drag_value.rs  ex_node.rs  hello_world.rs  interaction.rs  layout_cache.rs  layout_case_alignment_overflow.rs  layout_case_flex_wrap.rs  layout_case_grid_auto_flow.rs  layout_case_grid_tracks.rs  layout_case_masonry_ext.rs  layout_case_radial.rs  layout_case_stack.rs  layout_solver_no_widgets.html  layout_solver_no_widgets.rs  layout_solver_ultra_complex.html  layout_solver_ultra_complex.rs  masonry.rs  panel_divider.rs  panel_window.rs  radio.rs  sci_fi.rs  scroll_view.rs  seekbar.rs  select.rs  text_field.rs  text_label.rs  textfield.rs  texture.rs  toggle.rs  widgets.rs
scripts/: check_examples_serial_release.sh  package_alpha_serial.sh  test_lib_serial_release.sh  verify_alpha_release.sh  verify_serial_release.sh
src/: lib.rs
src/interaction/: feedback.rs  inputfield.rs  math.rs  mod.rs  picking.rs
src/layout/: geomerty.rs  layout_system.rs  mod.rs  profiling.rs  profiling_integration.rs  univis_node.rs
src/layout/algorithms/: bridge.rs
src/layout/algorithms/places/: display.rs  mod.rs
src/layout/core/: components.rs  hierarchy.rs  layout_cache.rs  mod.rs  pass_down.rs  pass_up.rs  solver.rs
src/layout/pipeline/: mod.rs
src/layout/render/: material.rs  material_3d.rs  mod.rs  system.rs
src/layout/render/shaders/: unode.wgsl
src/style/: mod.rs
src/univis_debug/: debug.rs  mod.rs
src/widget/: badge.rs  button.rs  drag_value.rs  icon_btn.rs  image.rs  mod.rs  panel.rs  progress.rs  radio.rs  scroll_view.rs  seekbar.rs  text_3d_label.rs  text_field.rs  text_label.rs  textfield.rs  toggle.rs
