[package]
name = "univis_ui"
version = "0.1.0"
edition = "2024" # Rust 2024 edition is appropriate for modern development
description = "A high-performance, SDF-based hybrid world-space UI framework for the Bevy game engine."
authors = ["abdellah-haffout <abdellahhaffout9@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/USERNAME/univis" # Replace with your actual repo URL
homepage = "https://github.com/USERNAME/univis"
keywords = ["bevy", "ui", "sdf", "gamedev", "hud"]
categories = ["game-development", "gui", "rendering"]
exclude = [".github/*"] # Exclude heavy assets from the published crate

[dependencies]
bevy = "0.17.3"


