[package]
name = "univis_ui_core"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core types and shared scheduling labels for Univis UI."
repository = "https://github.com/univiseditor/univis_ui"
homepage = "https://github.com/univiseditor/univis_ui"

[dependencies]
bevy = "0.17.3"
