[package]
name = "univis_ui_interaction"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Interaction and picking backend for Univis UI."
repository = "https://github.com/univiseditor/univis_ui"
homepage = "https://github.com/univiseditor/univis_ui"

[dependencies]
bevy = "0.17.3"
univis_ui_core = { path = "../univis_ui_core", version = "0.2.0" }
