[package]
name = "univis_ui_widgets"
version = "0.2.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Built-in widgets for Univis UI."
repository = "https://github.com/univiseditor/univis_ui"
homepage = "https://github.com/univiseditor/univis_ui"

[dependencies]
bevy = "0.18.1"
univis_ui_engine = { path = "../univis_ui_engine", version = "0.2.0-alpha.1" }
univis_ui_interaction = { path = "../univis_ui_interaction", version = "0.2.0-alpha.1" }
univis_ui_style = { path = "../univis_ui_style", version = "0.2.0-alpha.1" }
